--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ __pycache__/
 .env
 
 # Database
-data/sql_news.db
+data/
 
 # Logs
 logs/
@@ -15,3 +15,7 @@ Thumbs.db
 
 # Virtual environment
 venv/
+
+
+# Distribution / packaging
+env/
